examples/datalog/12_errors/61_unbound_in_comparison.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unbound_cmp
Knowledge graph 'test_unbound_cmp' created.
Switched to knowledge graph: test_unbound_cmp
> .kg use test_unbound_cmp
Switched to knowledge graph: test_unbound_cmp
> +data[(1,), (2,)].
Inserted 2 fact(s) into 'data'.
> bad(X) :- data(X), Y > 5.
Script error: Query execution failed: Variable 'Y' not found in schema ["X"]
