examples/datalog/12_errors/61_unbound_in_comparison.dl
% Test: Unbound variable in comparison
% Expected: Safety error
% Category: 12_errors
% Priority: P2 - Error handling

.kg create test_unbound_cmp
.kg use test_unbound_cmp

+data[(1,), (2,)].

% Y is not bound before comparison
bad(X) :- data(X), Y > 5.

.kg use default
.kg drop test_unbound_cmp
